--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <title>Drtis Personal Website</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>Hello World!</body>
 </html>
