--- a/index.html
+++ b/index.html
@@ -4,5 +4,8 @@
     <title>Drtis Personal Website</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body>Hello World!</body>
+  <body>
+    <h1>Hello World!</h1>
+    <script src="script.js"></script>
+  </body>
 </html>
