I made changes to index.html, changed style.cssand also the script.js, added images changed text and colors

--- a/index.html
+++ b/index.html
@@ -5,7 +5,16 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Hello World!</h1>
-    <script src="script.js"></script>
+    <div class="hero">
+        <div class="container">
+            <h1>Hey Beautiful!</h1>
+            <p>I love you more than anything in this world!</p>
+            <script src="script.js"></script>
+            </div>
+            </div>
+            <h2>
+            <div><img class="img-binx-1" src="Binx 1.jpg" width="300" alt=""></div>
+            <div><img class="img-binx-2" src="Binx 2.jpg" width="300" alt=""></div>
+            </h2>
   </body>
 </html>
