--- a/index.html
+++ b/index.html
@@ -7,14 +7,10 @@
   <body>
     <div class="hero">
         <div class="container">
-            <h1>Hey Beautiful!</h1>
-            <p>I love you more than anything in this world!</p>
+            <h1>Hello World!</h1>
+            <p>This text is inisde a paragraph</p>
             <script src="script.js"></script>
             </div>
             </div>
-            <h2>
-            <div><img class="img-binx-1" src="Binx 1.jpg" width="300" alt=""></div>
-            <div><img class="img-binx-2" src="Binx 2.jpg" width="300" alt=""></div>
-            </h2>
-  </body>
+         
 </html>
