trying to get images after loading them to git

--- a/index.html
+++ b/index.html
@@ -12,5 +12,8 @@
             <script src="script.js"></script>
             </div>
             </div>
-         
+            <h2>
+            <img class="img-Binx-1" src="Binx 1.jpg" alt="">
+            <img class="img-Binx-2" src="Binx 2.jpg" alt="">
+            </h2>
 </html>
