--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
   <body>
     <div class="hero">
         <div class="container">
-            <h1>Hello World!</h1>
-            <p>This text is inisde a paragraph</p>
+            <h1>HI MY NAME IS BINX!</h1>
+            <p>I AM THE WORLDS CUTEST MURDER POTATO!</p>
             <script src="script.js"></script>
             </div>
             </div>
             <h2>
             <img class="img-Binx-1" src="Binx 1.jpg" alt="">
             <img class="img-Binx-2" src="Binx 2.jpg" alt="">
+            <img class="img-Beauty-and-the-Beast" src="Beauty and the Beast.jpg" alt="">
+            <img class="img-Clearly-a-Trap" src="Clearly a Trap.jpg" alt="">
             </h2>
 </html>
