added more photos and cleaned up some css

--- a/index.html
+++ b/index.html
@@ -13,9 +13,16 @@
             </div>
             </div>
             <h2>
-            <img class="img-Binx-1" src="Binx 1.jpg" alt="">
-            <img class="img-Binx-2" src="Binx 2.jpg" alt="">
-            <img class="img-Beauty-and-the-Beast" src="Beauty and the Beast.jpg" alt="">
-            <img class="img-Clearly-a-Trap" src="Clearly a Trap.jpg" alt="">
+            <img class="img-Binx" src="Binx 1.jpg" alt="">
+            <img class="img-Binx" src="Binx 2.jpg" alt="">
+            <img class="img-Binx" src="Beauty and the Beast.jpg" alt="">
+            <img class="img-Binx" src="Clearly a Trap.jpg" alt="">
+            <img class="img-Binx" src="Clingy.jpg" alt="">
+            <img class="img-Binx" src="I am the Senate.jpg" alt="">
+            <img class="img-Binx" src="Lets talk about this karen.jpg" alt="">
+            <img class="img-Binx" src="Murderous.jpg" alt="">
+            <img class="img-Binx" src="Pure Despise.jpg" alt="">
+            <img class="img-Binx" src="The Gate Keeper.jpg" alt="">
+            <img class="img-Binx" src="When will the next meal ever come.jpg" alt="">
             </h2>
 </html>
