corrections and changes

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <script src="script.js"></script>
             </div>
             </div>
-            <h2>
+          <h2>
             <img class="img-Binx" src="Binx 1.jpg" alt="">
             <img class="img-Binx" src="Binx 2.jpg" alt="">
             <img class="img-Binx" src="Beauty and the Beast.jpg" alt="">
@@ -23,6 +23,7 @@
             <img class="img-Binx" src="Murderous.jpg" alt="">
             <img class="img-Binx" src="Pure Despise.jpg" alt="">
             <img class="img-Binx" src="The Gate Keeper.jpg" alt="">
-            <img class="img-Binx" src="When will the next meal ever come.jpg" alt="">
-            </h2>
+            <img class="img-Binx"src="When will the next meal ever come.jpg" alt="">
+          </h2>
+   </body>
 </html>
