added button effects to all images with captions

--- a/index.html
+++ b/index.html
@@ -13,17 +13,40 @@
             </div>
             </div>
           <h2>
+            <button onclick="alert('Holding me in such a way will only result in your early death!')">
             <img class="img-Binx" src="Binx 1.jpg" alt="">
+            </button>
+            <button>
             <img class="img-Binx" src="Binx 2.jpg" alt="">
+            </button>
+            <button onclick="alert('Hes my best friend my pall hes my homeboy my rotten soilder hes my sweet cheese my good time boy')">
             <img class="img-Binx" src="Beauty and the Beast.jpg" alt="">
+            </button>
+            <button onclick="alert('Go ahead and touch what it is you dearly wish to so bad I will not remove your hands from your arms with my murder mittens not at all!')">
             <img class="img-Binx" src="Clearly a Trap.jpg" alt="">
+            </button>
+            <button onclick="alert('This is what life is all about right here, me and my servant resting together in peace until my next outburst!')">
             <img class="img-Binx" src="Clingy.jpg" alt="">
+            </button>
+            <button onclick="alert('YOU CAN NOT ARREST ME, I AM THE SENATE!')">
             <img class="img-Binx" src="I am the Senate.jpg" alt="">
+            </button>
+            <button onclick="alert('come on karen lets talk about this! Lets be rational here just turn the water off and lets take a breather!')">
             <img class="img-Binx" src="Lets talk about this karen.jpg" alt="">
+            </button>
+            <button onclick="alert('I can send you to the big nap time in the sky if I choose. Just keep the food coming and maybe there will be a tomorrow..')">
             <img class="img-Binx" src="Murderous.jpg" alt="">
+            </button>
+            <button onclick="alert('Look at her, reading and enjoying her self. Who the fuck does she think she is!')">
             <img class="img-Binx" src="Pure Despise.jpg" alt="">
+            </button>
+            <button onclick="alert('I AM THE GATE KEEPER ARE YOU THE KEY MASTER! NON SHALL PASS!')">
             <img class="img-Binx" src="The Gate Keeper.jpg" alt="">
+            </button>
+            <button onclick="alert('I will slowly starve to death as she pays no attention to me at all.....')">
             <img class="img-Binx"src="When will the next meal ever come.jpg" alt="">
+            </button>
+          </a>
           </h2>
    </body>
 </html>
